# ros2-vision-navigation

./: CMakeLists.txt  package.xml
launch/: navigation.launch.py  sim.launch.py  system_bringup.launch.py
maps/: map.pgm
models/mbot/: model.config  model.sdf
params/: nav2_params.yaml
scripts/: auto_tune_nav2.py  brain_node.py  dynamic_obstacle.py  generate_map.py  item_spawner.py  sim_manager.py  vision_node.py
src/: main_node.cpp
srv/: SpawnItem.srv
worlds/: indoor_scene.world  turtlebot3_world.world
